# matrixpath

./: CMakeLists.txt  README.md  README.txt
include/: matrixpath.h
src/: CMakeLists.txt  config.h  config.h.in  main.cpp  matrix.cpp  matrix.h  node.cpp  node.h  path.cpp  path.h
src/lib/: CMakeLists.txt  matrixpath.cpp
src/python/: CMakeLists.txt  matrixpath.py  matrixpath_py.cpp  tests.py
test/: test_tree.csv
